--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v3
 
-      - name: Build notes
+      - name: latex
         uses: cvxgrp/.github/actions/latex@main
         with:
           paper: applied_stats_2023.tex
